--- a/Tarea8_SRomero_ARamirez.ipynb
+++ b/Tarea8_SRomero_ARamirez.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "**Fecha:** 30 de Junio del 2021.\n",
     "\n",
-    "**Expediente** : 715099.\n",
+    "**Expediente** : IF726061, IF715099.\n",
     "**Profesor:** Oscar David Jaramillo Zuluaga.\n",
     "    \n",
     "**Link Github**: https://github.com/SantiRiggen/Tarea8_SRomero_ARamirez\n",
@@ -201,58 +201,165 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-7-d09e7a326459>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-7-d09e7a326459>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    .\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Código de solución Andrés Villanueva\n",
-    ".\n",
-    ".\n",
-    ".\n",
-    ".\n"
+    "# Código de solución Andrés Ramírez Villanueva\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Inciso a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.06783350231646393\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Con montecarlo\n",
+    "\n",
+    "def estratos(a, b, n):\n",
+    "    i = np.arange(0,n)\n",
+    "    u2 = np.random.uniform(a,b,n)\n",
+    "    v = (u2+i)/n\n",
+    "    return v\n",
+    "\n",
+    "f_x = lambda x: (3/2)*x**2 if x>= -1 and x <= 1 else 0\n",
+    "x_i = lambda u: (2*(u-(1/2)))**(1/3) if u > 0.5 else -(2*((1/2)-u))**(1/3)\n",
+    "\n",
+    "np.random.seed(100)\n",
+    "\n",
+    "n = 10\n",
+    "\n",
+    "vector =  np.random.uniform(0, 1, n)\n",
+    "\n",
+    "muestra = np.asarray(list(map(x_i, vector)))\n",
+    "\n",
+    "print(muestra.mean())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Inciso b)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.03915223601893479\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Estratificado\n",
+    "\n",
+    "n_1 = 3\n",
+    "n_2 = 3\n",
+    "n_3 = 4\n",
+    "\n",
+    "suma = n_1+n_2+n_3\n",
+    "\n",
+    "r = [np.random.uniform(0, 0.6, n_1), np.random.uniform(0.6, 0.9, n_2), np.random.uniform(0.9, 1, n_3)]\n",
+    "\n",
+    "w = [(n_1/suma/0.6), (n_2/suma/0.3), (n_3/suma/0.1)]\n",
+    "\n",
+    "muestra_2 = list(map(lambda x: np.asarray(list(map(x_i, x))), r))\n",
+    "\n",
+    "resul = list(map(lambda x, wi: x/wi, muestra_2, w))\n",
+    "\n",
+    "resul = np.concatenate(resul)\n",
+    "\n",
+    "print(np.mean(resul))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Inciso c)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.3306690738754695e-17"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Números aleatorios complementarios\n",
+    "\n",
+    "u_1 = np.random.rand(5)\n",
+    "\n",
+    "u_2 = 1-u_1\n",
+    "\n",
+    "U = [u_1, u_2]\n",
+    "\n",
+    "np.mean(list(map(lambda u: np.asarray(list(map(x_i, u))), U)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Inciso d)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-0.33873197152712575, -0.0746433668662757, -0.04854777566747912, 0.00287336554170371]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Con b estratos\n",
+    "\n",
+    "b = [2, 4, 6, 10]\n",
+    "\n",
+    "a =  np.asarray(list(map(lambda x: estratos(0, 1, x), b)))\n",
+    "\n",
+    "muestras = np.asarray(list(map(lambda x: np.asarray(list(map(x_i, x))), a)))\n",
+    "\n",
+    "print([np.mean(muestras[x]) for x in range(4)])"
+   ]
   }
  ],
  "metadata": {
@@ -271,7 +378,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
